--- a/templates/property/index.html
+++ b/templates/property/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Properties in database</title>
-    </head>
-
-    <body>
+{% extends 'property/base.html' %}
+{% block title %}Properties arranged by postcode{% endblock %}
+{% block body_block %}        
         <h1>Properties arranged by postcode</h1>
 
         {% if properties %}
@@ -15,6 +11,7 @@
                 <td>{{ property.suburb }}</td>
                 <td>{{ property.state }}</td>
                 <td>{{ property.postcode }}</td>
+                <td>  (<a href="{% url "property-edit" pk=property.propertyUID %}">edit</a>)</td>
                 <td><img src="/user_res/{{ property.imagefile}}" width="200px"></td>
                 </tr>
 
@@ -24,6 +21,4 @@
         {% else %}
             <strong>There are no categories present.</strong>
         {% endif %}
-
-    </body>
-</html>
+        {% endblock %}
