--- a/templates/property/list.html
+++ b/templates/property/list.html
@@ -1,16 +1,30 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Properties in database</title>
-    </head>
-
-    <body>
+{% extends 'property/base.html' %}
+{% load staticfiles %}
+   {% block extra-css %}
+<link href="{% static 'css/list-html-custom-css.css' %}" rel="stylesheet">{% endblock %}
+{% block title %}Properties listed by postcode{% endblock %}
+{% block body_block %}
         <h1>Properties listed by postcode</h1>
-
+   <div class="container table-responsive">
+   <table class="table table-striped table-hover table-condensed">
     {% for property in propertys %}
+
     {# Each "property" is a property model object. #}
-    {{ property.street_address|upper }}<br />
+
+                   <tr>
+<td class="propimage"><img src="/user_res/{{ property.imagefile}}" width="300px"></td>
+</tr><tr>
+                <td>{{ property.street_address}}</td>
+                <td>{{ property.suburb }}</td>
+                <td>{{ property.state }}</td>
+                <td>{{ property.postcode }}</td>
+                <td>  <a class="btn btn-primary" href="{% url "property-edit" pk=property.propertyUID %}">edit</a></td>
+               
+                </tr>
 {% endfor %}
+   </table>
+   </div>
+
 
 <div class="pagination">
     <span class="step-links">
@@ -27,6 +41,4 @@
         {% endif %}
     </span>
 </div>
-
-    </body>
-</html>
+     {% endblock %}
